--- a/_config.yml
+++ b/_config.yml
@@ -96,6 +96,7 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
+      toc: true
       comments: true
       share: true
       related: true
