--- a/_config.yml
+++ b/_config.yml
@@ -97,6 +97,7 @@ defaults:
       author_profile: true
       read_time: true
       toc: true
+      toc_sticky: true
       comments: true
       share: true
       related: true
