Update follow label translation to English

--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -23,7 +23,7 @@ ja: &DEFAULT_JA
   comments_title             : "コメント"
   more_label                 : "さらに詳しく"
   related_label              : "関連記事"
-  follow_label               : "フォロー"
+  follow_label               : "follow"
   feed_label                 :
   powered_by                 :
   website_label              :
