--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: ryoseiのブログ
+title: ryosei's Blog
 locale: ja-JP
 email:
 description: >- # this means to ignore newlines until "baseurl:"
@@ -63,9 +63,9 @@ author:
   avatar : "/assets/images/bio-photo.jpg"
   bio    : "主にプログラミングのことを呟く予定"
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://r67018.github.io"
+    # - label: "Website"
+    #   icon: "fas fa-fw fa-link"
+    #   url: "https://r67018.github.io"
     - label: "X"
       icon: "fab fa-fw fa-square-x-twitter"
       url: "https://x.com/r67018"
