Add create-post script and update config to exclude it from build

--- a/_config.yml
+++ b/_config.yml
@@ -48,6 +48,8 @@ include:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+exclude:
+  - create-post.sh
 
 # Plugins (previously gems:)
 plugins:
@@ -90,6 +92,7 @@ defaults:
     values:
       layout: single
       author_profile: true
+      show_date: true
       read_time: true
       toc: true
       toc_sticky: true
